--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
-This is a test
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Home</title>
+    <link rel="stylesheet" href="styles/normalize.css">
+</head>
+<body>
+    
+</body>
+</html>
