--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
+    <meta name="description" content="Home page for the Web Development Front end class">
+    <meta name="author" content="Hyrum Wines | WDD 231">
     <link rel="stylesheet" href="styles/normalize.css">
 </head>
 <body>
