Added header content

--- a/index.html
+++ b/index.html
@@ -9,6 +9,17 @@
     <link rel="stylesheet" href="styles/normalize.css">
 </head>
 <body>
-    
+    <header>
+        <img src="" alt="Profile image of Hyrum Wines">
+        <h1>Hyrum O Wines</h1>
+        <nav>
+            <a href="index.html">Home</a>
+            <a href="">Chamber</a>
+            <a href="">GitHub Profile</a>
+            <a href="https://www.linkedin.com/in/hyrum-wines/">LinkedIn</a>
+        </nav>
+    </header>
+    <main></main>
+    <footer></footer>
 </body>
 </html>
