added profile image

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header>
-        <img src="" alt="Profile image of Hyrum Wines">
+        <img src="images/profile.jpg" alt="Profile image of Hyrum Wines">
         <h1>Hyrum O Wines</h1>
         <nav>
             <a href="index.html">Home</a>
