Added main and footer content to the home page

--- a/index.html
+++ b/index.html
@@ -19,7 +19,42 @@
             <a href="https://www.linkedin.com/in/hyrum-wines/">LinkedIn</a>
         </nav>
     </header>
-    <main></main>
-    <footer></footer>
+    <main>
+        <section>
+            <h2>Course Work</h2>
+            <ul>
+                <li></li>
+                <li></li>
+                <li></li>
+            </ul>
+        </section>
+        <section>
+            <h2>Phoenix, Arizona, USA</h2>
+            <figure>
+                <img src="" alt="image of Arizona">
+                <figcaption></figcaption>
+            </figure>
+        </section>
+        <section>
+            <h2>Web and Computer Programing Certificate</h2>
+            <div>
+                <button>All</button>
+                <button>CSE</button>
+                <button>WDD</button>
+            </div>
+            <div>
+                <button>CSE 110</button>
+                <button>CSE 111</button>
+                <button>CSE 210</button>
+                <button>WDD 130</button>
+                <button>WDD 131</button>
+                <button>WDD 231</button>
+            </div>
+        </section>
+    </main>
+    <footer>
+        <p>&copy; <span id="currentYear"></span> Hyrum Wines Arizona</p>
+        <p id="lastModified"></p>
+    </footer>
 </body>
 </html>
