added an image of arizona

--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
         <section>
             <h2>Phoenix, Arizona, USA</h2>
             <figure>
-                <img src="" alt="image of Arizona">
-                <figcaption></figcaption>
+                <img src="images/arizona.jpeg" alt="image of Arizona">
+                <figcaption>Arizona</figcaption>
             </figure>
         </section>
         <section>
