--- a/index.html
+++ b/index.html
@@ -1,60 +1,62 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home</title>
-    <meta name="description" content="Home page for the Web Development Front end class">
-    <meta name="author" content="Hyrum Wines | WDD 231">
-    <link rel="stylesheet" href="styles/normalize.css">
-</head>
-<body>
-    <header>
-        <img src="images/profile.jpg" alt="Profile image of Hyrum Wines">
-        <h1>Hyrum O Wines</h1>
-        <nav>
-            <a href="index.html">Home</a>
-            <a href="">Chamber</a>
-            <a href="">GitHub Profile</a>
-            <a href="https://www.linkedin.com/in/hyrum-wines/">LinkedIn</a>
-        </nav>
-    </header>
-    <main>
-        <section>
-            <h2>Course Work</h2>
-            <ul>
-                <li></li>
-                <li></li>
-                <li></li>
-            </ul>
-        </section>
-        <section>
-            <h2>Phoenix, Arizona, USA</h2>
-            <figure>
-                <img src="images/arizona.jpeg" alt="image of Arizona">
-                <figcaption>Arizona</figcaption>
-            </figure>
-        </section>
-        <section>
-            <h2>Web and Computer Programing Certificate</h2>
-            <div>
-                <button>All</button>
-                <button>CSE</button>
-                <button>WDD</button>
-            </div>
-            <div>
-                <button>CSE 110</button>
-                <button>CSE 111</button>
-                <button>CSE 210</button>
-                <button>WDD 130</button>
-                <button>WDD 131</button>
-                <button>WDD 231</button>
-            </div>
-        </section>
-    </main>
-    <footer>
-        <p>&copy; <span id="currentYear"></span> Hyrum Wines Arizona</p>
-        <p id="lastModified"></p>
-    </footer>
-</body>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Home</title>
+        <meta name="description" content="Home page for the Web Development Front end class">
+        <meta name="author" content="Hyrum Wines | WDD 231">
+        <link rel="stylesheet" href="styles/normalize.css">
+        <link rel="stylesheet" href="styles/main.css">
+    </head>
+    <body>
+        <header>
+            <img src="images/profile.jpg" alt="Profile image of Hyrum Wines">
+            <h1>Hyrum O Wines</h1>
+            <nav>
+                <button id="navMenu"></button>
+                <a href="index.html" id="current">Home</a>
+                <a href="">Chamber</a>
+                <a href="">GitHub Profile</a>
+                <a href="https://www.linkedin.com/in/hyrum-wines/">LinkedIn</a>
+            </nav>
+        </header>
+        <main>
+            <section>
+                <h2>Course Work</h2>
+                <ul>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                </ul>
+            </section>
+            <section>
+                <h2>Phoenix, Arizona, USA</h2>
+                <figure>
+                    <img src="images/arizona.jpeg" alt="image of Arizona">
+                    <figcaption>Arizona</figcaption>
+                </figure>
+            </section>
+            <section>
+                <h2>Web and Computer Programing Certificate</h2>
+                <div>
+                    <button>All</button>
+                    <button>CSE</button>
+                    <button>WDD</button>
+                </div>
+                <div>
+                <a>CSE 110</a>
+                <a>CSE 111</a>
+                <a href="https://github.com/hieusStorm/-cse210-projects">CSE 210</a>
+                <a href="https://hieusstorm.github.io/wdd130/">WDD 130</a>
+                <a href="https://hieusstorm.github.io/wdd131/">WDD 131</a>
+                <a href="https://hieusstorm.github.io/wdd231/">WDD 231</a>
+                </div>
+            </section>
+        </main>
+        <footer>
+            <p>&copy; <span id="currentYear"></span> Hyrum Wines Arizona</p>
+            <p id="lastModified"></p>
+        </footer>
+    </body>
 </html>
