added script tag

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
         <meta name="author" content="Hyrum Wines | WDD 231">
         <link rel="stylesheet" href="styles/normalize.css">
         <link rel="stylesheet" href="styles/main.css">
+        <script src="scripts/main.js" defer></script>
     </head>
     <body>
         <header>
@@ -43,14 +44,6 @@
                     <button>All</button>
                     <button>CSE</button>
                     <button>WDD</button>
-                </div>
-                <div>
-                <a>CSE 110</a>
-                <a>CSE 111</a>
-                <a href="https://github.com/hieusStorm/-cse210-projects">CSE 210</a>
-                <a href="https://hieusstorm.github.io/wdd130/">WDD 130</a>
-                <a href="https://hieusstorm.github.io/wdd131/">WDD 131</a>
-                <a href="https://hieusstorm.github.io/wdd231/">WDD 231</a>
                 </div>
             </section>
         </main>
