--- a/index.html
+++ b/index.html
@@ -40,10 +40,11 @@
             </section>
             <section>
                 <h2>Web and Computer Programing Certificate</h2>
+                <p id="credit"></p>
                 <div>
-                    <button>All</button>
-                    <button>CSE</button>
-                    <button>WDD</button>
+                    <button id="allFilter">All</button>
+                    <button id="cseFilter">CSE</button>
+                    <button id="wddFilter">WDD</button>
                 </div>
             </section>
         </main>
