--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Home</title>
+        <title>Home - WDD 231 | Hyrum Wines</title>
         <meta name="description" content="Home page for the Web Development Front end class">
         <meta name="author" content="Hyrum Wines | WDD 231">
         <link rel="preconnect" href="https://fonts.googleapis.com">
