--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
         <title>Home - WDD 231 | Hyrum Wines</title>
         <meta name="description" content="Home page for the Web Development Front end class">
         <meta name="author" content="Hyrum Wines | WDD 231">
+        <meta property="og:title" content="Home - WDD 231 | Hyrum Wines">
+        <meta property="og:type" content="website">
+        <meta property="og:image" content="https://hieusstorm.github.io/wdd231/images/arizona.jpeg">
+        <meta property="og:url" content="https://hieusstorm.github.io/wdd231/">
+        <link rel="icon" href="favicon.ico">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link
