added social media icons

--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -37,9 +37,9 @@
                 <p>(623)-654-3030</p>
             </section>
             <section>
-                <a href="https://www.youtube.com/"><img src="" alt="youtube"></a>
-                <a href="https://x.com/"><img src="" alt="X logo"></a>
-                <a href="https://www.linkedin.com/"><img src="" alt="LinkedIn"></a>
+                <a href="https://www.youtube.com/"><img src="images/youtube.png" alt="youtube"></a>
+                <a href="https://x.com/"><img src="images/x.png" alt="X logo"></a>
+                <a href="https://www.linkedin.com/"><img src="images/linkedin.png" alt="LinkedIn"></a>
             </section>
             <section>
                 <p>WDD 231 Class Project</p>
