added the tags for mobile view

--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -21,6 +21,7 @@
             <img src="" alt="logo">
             <h1>Deer Valley AZ</h1>
             <p>Chamber of Commerce</p>
+            <button id="navButton"></button>
             <nav>
                 <a href="#">Home</a>
                 <a href="directory.html" id="current">Directory</a>
