--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -25,7 +25,7 @@
     </head>
     <body>
         <header>
-            <img src="" alt="logo">
+            <img src="images/logo.png" alt="logo">
             <h1>Deer Valley AZ</h1>
             <p>Chamber of Commerce</p>
             <button id="navButton"></button>
