Fixed header formatting

--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -25,9 +25,11 @@
     </head>
     <body>
         <header>
-            <img src="images/logo.png" alt="logo">
-            <h1>Deer Valley AZ</h1>
-            <p>Chamber of Commerce</p>
+            <div>
+                <img src="images/logo.png" alt="logo">
+                <h1>Deer Valley AZ</h1>
+                <p>Chamber of Commerce</p>
+            </div>
             <button id="navButton"></button>
             <nav>
                 <a href="#">Home</a>
