adjusted loctiion of member content

--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -38,7 +38,9 @@
                 <a href="#">Discover</a>
             </nav>
         </header>
-        <main></main>
+        <main>
+            <div></div>
+        </main>
         <footer>
             <section>
                 <p>Deer Vally AZ Chamber of Commerce</p>
