adjusted how to find the member area

--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -39,7 +39,7 @@
             </nav>
         </header>
         <main>
-            <div></div>
+            <div id="memberArea"></div>
         </main>
         <footer>
             <section>
