--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -39,6 +39,10 @@
             </nav>
         </header>
         <main>
+            <div>
+                <button id="grid">⏹️Grid</button>
+                <button id="list">📄 List</button>
+            </div>
             <div id="memberArea"></div>
         </main>
         <footer>
