corrected some html warnings

--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -43,26 +43,26 @@
                 <button id="grid">⏹️Grid</button>
                 <button id="list">📄 List</button>
             </div>
-            <div id="memberArea"></div>
+            <div id="memberArea" class="grid"></div>
         </main>
         <footer>
-            <section>
+            <div>
                 <p>Deer Vally AZ Chamber of Commerce</p>
                 <p>702 W Deer Valley Rd, Phoenix, AZ 85027</p>
                 <p>info@deervalleycc.org</p>
                 <p>(623)-654-3030</p>
-            </section>
-            <section>
+            </div>
+            <div>
                 <a href="https://www.youtube.com/"><img src="images/youtube.png" alt="youtube"></a>
                 <a href="https://x.com/"><img src="images/x.png" alt="X logo"></a>
                 <a href="https://www.linkedin.com/"><img src="images/linkedin.png" alt="LinkedIn"></a>
-            </section>
-            <section>
+            </div>
+            <div>
                 <p>WDD 231 Class Project</p>
                 <p>Hyrum Wines</p>
                 <p>&copy; <span id="currentYear"></span> Deer Valley AZ Chamber of Commerce</p>
                 <p id="modified"></p>
-            </section>
+            </div>
         </footer>
     </body>
 </html>
