--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -32,7 +32,7 @@
             </div>
             <nav>
                 <button id="navButton"></button>
-                <a href="#">Home</a>
+                <a href="index.html">Home</a>
                 <a href="directory.html" id="current">Directory</a>
                 <a href="#">Join</a>
                 <a href="#">Discover</a>
