added hero images

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -38,16 +38,16 @@
             </nav>
         </header>
         <main>
-            <div><img src="" alt="Hero image"></div>
+            <img src="images/hero.png" alt="Hero image">
             <h2>Home</h2>
             <p>Don't wait join the chamber of Commerce today! <a href="#">here</a></p>
             <section>
                 <h3>Events</h3>
             </section>
-            <section>
+            <section id="currentWeather">
                 <h3>Current Weather</h3>
             </section>
-            <section>
+            <section id="weatherForecast">
                 <h3>Weather Forcast</h3>
             </section>
             <div id="priorityMemebers"></div>
