--- a/chamber/index.html
+++ b/chamber/index.html
@@ -41,16 +41,18 @@
             <img src="images/hero.png" alt="Hero image">
             <h2>Home</h2>
             <p>Don't wait join the chamber of Commerce today! <a href="#">here</a></p>
-            <section>
-                <h3>Events</h3>
-            </section>
-            <section id="currentWeather">
-                <h3>Current Weather</h3>
-            </section>
-            <section id="weatherForecast">
-                <h3>Weather Forcast</h3>
-            </section>
-            <div id="priorityMemebers"></div>
+            <div class="grid">
+                <section>
+                    <h3>Events</h3>
+                </section>
+                <section id="currentWeather">
+                    <h3>Current Weather</h3>
+                </section>
+                <section id="weatherForecast">
+                    <h3>Weather Forcast</h3>
+                </section>
+            </div>
+            <div id="priorityMembers"></div>
         </main>
         <footer>
             <div>
