hero img formatting

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -38,7 +38,7 @@
             </nav>
         </header>
         <main>
-            <img src="images/hero.png" alt="Hero image">
+            <img src="images/hero.png" alt="Hero image" class="hero">
             <h2>Home</h2>
             <p>Don't wait join the chamber of Commerce today! <a href="#">here</a></p>
             <div class="grid">
