added a modal element

--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
                 </figure>
             </section>
             <section>
+                <dialog id="courseDetails"></dialog>
                 <h2>Web and Computer Programing Certificate</h2>
                 <p id="credit"></p>
                 <div>
