--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -34,7 +34,7 @@
                 <button id="navButton"></button>
                 <a href="index.html">Home</a>
                 <a href="directory.html" id="current">Directory</a>
-                <a href="#">Join</a>
+                <a href="join.html">Join</a>
                 <a href="#">Discover</a>
             </nav>
         </header>
