--- a/chamber/join.html
+++ b/chamber/join.html
@@ -31,29 +31,13 @@
             </div>
             <nav>
                 <button id="navButton"></button>
-                <a href="index.html" id="current">Home</a>
+                <a href="index.html">Home</a>
                 <a href="directory.html">Directory</a>
                 <a href="join.html">Join</a>
                 <a href="#">Discover</a>
             </nav>
         </header>
-        <main>
-            <img src="images/hero.png" alt="Hero image" class="hero">
-            <h2>Home</h2>
-            <p>Don't wait join the chamber of Commerce today! <a href="#">here</a></p>
-            <div class="grid">
-                <section>
-                    <h3>Events</h3>
-                </section>
-                <section id="currentWeather">
-                    <h3>Current Weather</h3>
-                </section>
-                <section id="weatherForecast">
-                    <h3>Weather Forcast</h3>
-                </section>
-            </div>
-            <div id="priorityMembers"></div>
-        </main>
+        <main></main>
         <footer>
             <div>
                 <p>Deer Vally AZ Chamber of Commerce</p>
