--- a/chamber/index.html
+++ b/chamber/index.html
@@ -40,7 +40,7 @@
         <main>
             <img src="images/hero.png" alt="Hero image" class="hero">
             <h2>Home</h2>
-            <p>Don't wait join the chamber of Commerce today! <a href="#">here</a></p>
+            <p>Don't wait join the chamber of Commerce today! <a href="join.html">here</a></p>
             <div class="grid">
                 <section>
                     <h3>Events</h3>
