--- a/chamber/join.html
+++ b/chamber/join.html
@@ -91,7 +91,7 @@
                 </section>
                 <section>
                     <h2>Membership Level Information</h2>
-                    <div>
+                    <div class="memberCards">
                         <h3>Nonprofit Membership Level</h3>
                         <button class="openButton">Learn More</button>
                         <dialog id="membershipLevel0">
@@ -104,7 +104,7 @@
                                 Commerce, providing valuable exposure and networking opportunities.</p>
                         </dialog>
                     </div>
-                    <div>
+                    <div class="memberCards">
                         <h3>Bronze Membership Level</h3>
                         <button class="openButton">Learn More</button>
                         <dialog id="membershipLevel1">
@@ -117,7 +117,7 @@
                                 in, maximizing your visibility and engagement.</p>
                         </dialog>
                     </div>
-                    <div>
+                    <div class="memberCards">
                         <h3>Silver Membership Level</h3>
                         <button class="openButton">Learn More</button>
                         <dialog id="membershipLevel2">
@@ -130,7 +130,7 @@
                                 engagement.</p>
                         </dialog>
                     </div>
-                    <div>
+                    <div class="memberCards">
                         <h3>Gold Membership Level</h3>
                         <button class="openButton">Learn More</button>
                         <dialog id="membershipLevel3">
