--- a/chamber/join.html
+++ b/chamber/join.html
@@ -3,8 +3,8 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Chamber of Commerce | Deer Valley AZ</title>
-        <meta name="description" content="A home page for the Chamber of Commerce">
+        <title>Join | Chamber of Commerce | Deer Valley AZ</title>
+        <meta name="description" content="The page to join the Chamber of Commerce">
         <meta name="author" content="Hyrum Wines | WDD 231">
         <link rel="icon" href="favicon.ico">
 
@@ -55,7 +55,8 @@
                         <label>
                             <p>Organizational Title:</p>
                             <input type="text" name="organization-title" title="organization-title"
-                                placeholder="Example Organization Title" autocomplete="organization-title" pattern="[A-za-z-]{7,}">
+                                placeholder="Example Organization Title" autocomplete="organization-title"
+                                pattern="[A-za-z-]{7,}">
                         </label>
                         <label>
                             <p>Email: *</p>
