improved form for using the data submitted

--- a/chamber/join.html
+++ b/chamber/join.html
@@ -44,12 +44,12 @@
                     <form method="get" action="thankyou.html">
                         <label>
                             <p>First Name: *</p>
-                            <input type="text" name="firstName" title="firstName" required placeholder="First Name"
+                            <input type="text" name="first-name" title="firstName" required placeholder="First Name"
                                 autocomplete="given-name">
                         </label>
                         <label>
                             <p>Last Name: *</p>
-                            <input type="text" name="lastName" title="lastName" required placeholder="Last Name"
+                            <input type="text" name="last-name" title="lastName" required placeholder="Last Name"
                                 autocomplete="family-name">
                         </label>
                         <label>
@@ -65,16 +65,16 @@
                         </label>
                         <label>
                             <p>Phone Number: *</p>
-                            <input type="tel" name="phoneNumber" title="phoneNumber" required autocomplete="tel">
+                            <input type="tel" name="phone-number" title="phoneNumber" required autocomplete="tel">
                         </label>
                         <label>
                             <p>Business/Organization's Name: *</p>
-                            <input type="text" name="businessName" title="businessName" required
+                            <input type="text" name="business-name" title="business name" required
                                 placeholder="Example Business" autocomplete="organization">
                         </label>
                         <label>
                             <p>Membership Level: *</p>
-                            <select name="membershipLevel" title="membershipLevel" required>
+                            <select name="membership-level" title="membership level" required>
                                 <option value="" selected disabled>Select a Membership Level</option>
                                 <option value="0">Nonprofit Membership</option>
                                 <option value="1">Bronze Membership</option>
