place to put and style display data

--- a/chamber/thankyou.html
+++ b/chamber/thankyou.html
@@ -39,6 +39,7 @@
         </header>
         <main>
             <h2>Thank You For Joining!</h2>
+            <div id="memberInfo"></div>
         </main>
         <footer>
             <div>
