--- a/chamber/thankyou.html
+++ b/chamber/thankyou.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Join | Chamber of Commerce | Deer Valley AZ</title>
+        <title>Thank You | Chamber of Commerce | Deer Valley AZ</title>
         <meta name="description" content="The page to join the Chamber of Commerce">
         <meta name="author" content="Hyrum Wines | WDD 231">
         <link rel="icon" href="favicon.ico">
