--- a/chamber/join.html
+++ b/chamber/join.html
@@ -74,7 +74,7 @@
                         </label>
                         <label>
                             <p>Membership Level: *</p>
-                            <select name="membership-level" title="membership level" required>
+                            <select name="membership-level" title="membership level">
                                 <option value="" selected disabled>Select a Membership Level</option>
                                 <option value="0">Nonprofit Membership</option>
                                 <option value="1">Bronze Membership</option>
