--- a/chamber/join.html
+++ b/chamber/join.html
@@ -43,37 +43,37 @@
                     <h2>Membership Application</h2>
                     <form method="get" action="thankyou.html">
                         <label>
-                            <p>First Name: *</p>
+                            First Name: *
                             <input type="text" name="first-name" title="firstName" required placeholder="First Name"
                                 autocomplete="given-name">
                         </label>
                         <label>
-                            <p>Last Name: *</p>
+                            Last Name: *
                             <input type="text" name="last-name" title="lastName" required placeholder="Last Name"
                                 autocomplete="family-name">
                         </label>
                         <label>
-                            <p>Organizational Title:</p>
+                            Organizational Title:
                             <input type="text" name="organization-title" title="organization-title"
                                 placeholder="Example Organization Title" autocomplete="organization-title"
                                 pattern="[A-za-z-]{7,}">
                         </label>
                         <label>
-                            <p>Email: *</p>
+                            Email: *
                             <input type="email" name="email" title="email" required placeholder="exampleEmail@gmail.com"
                                 autocomplete="email">
                         </label>
                         <label>
-                            <p>Phone Number: *</p>
+                            Phone Number: *
                             <input type="tel" name="phone-number" title="phoneNumber" required autocomplete="tel">
                         </label>
                         <label>
-                            <p>Business/Organization's Name: *</p>
+                            Business/Organization's Name: *
                             <input type="text" name="business-name" title="business name" required
                                 placeholder="Example Business" autocomplete="organization">
                         </label>
                         <label>
-                            <p>Membership Level: *</p>
+                            Membership Level: *
                             <select name="membership-level" title="membership level">
                                 <option value="" selected disabled>Select a Membership Level</option>
                                 <option value="0">Nonprofit Membership</option>
@@ -83,7 +83,7 @@
                             </select>
                         </label>
                         <label>
-                            <p>Description:</p>
+                            Description:
                             <textarea name="description" title="description"></textarea>
                         </label>
                         <input type="hidden" name="timestamp" id="timestamp">
