added a link to the chamber page

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <nav>
                 <button id="navMenu"></button>
                 <a href="index.html" id="current">Home</a>
-                <a href="">Chamber</a>
+                <a href="chamber/index.html">Chamber</a>
                 <a href="">GitHub Profile</a>
                 <a href="https://www.linkedin.com/in/hyrum-wines/">LinkedIn</a>
             </nav>
