finished the site plan

--- a/project/site-plan.html
+++ b/project/site-plan.html
@@ -10,7 +10,12 @@
         <meta property="og:type" content="website">
         <!-- <meta property="og:image" content="https://hieusstorm.github.io/wdd231/images/arizona.jpeg"> -->
         <meta property="og:url" content="https://hieusstorm.github.io/wdd231/project">
-        <link rel="icon" href="../favicon.ico">
+        <link rel="icon" href="favicon.ico">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link
+            href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Nanum+Gothic&display=swap"
+            rel="stylesheet">
         <link rel="stylesheet" href="styles/main.css">
     </head>
     <body>
@@ -20,12 +25,10 @@
         <main>
             <h2>Site Name</h2>
             <p><strong>Site Name</strong>: Magic Deck Learner</p>
-            <p>This name represents the purpose of the site and provides and shows how the site is for learning how to
-                play different Magic the Gathering decks.</p>
-            <img src="" alt="logo">
+            <p>This name represents the purpose of the site and provides and shows how the site is for learning how to play different Magic the Gathering decks.</p>
+            <img src="images/logo.png" alt="logo">
             <h2>Site Purpose</h2>
-            <p>This site will provide a place to view deck lists for Magic the Gathering along with a brief description
-                of each deck to help with being able to learn how to play each deck.</p>
+            <p>This site will provide a place to view deck lists for Magic the Gathering along with a brief description of each deck to help with being able to learn how to play each deck.</p>
             <h2>Scenarios</h2>
             <ol>
                 <li>What makes this system deck building site stand out?</li>
@@ -40,8 +43,13 @@
             </ol>
             <p></p>
             <h2>Color Schema</h2>
+            <p><strong>Primary Color</strong>(used with the header and footer): #0a5e3b</p>
+            <p><strong>Secondary Color</strong>(used with divs and other specific sections): #0a5e3b</p>
             <h2>Typography</h2>
+            <p><strong>Heading font</strong>(used with all heading tags): Nanum Gothic</p>
+            <p><strong>Text font</strong>(used everywhere else): Lato</p>
             <h2>Wireframe</h2>
+            <img src="images/wireframe.png" alt="wireframe" loading="lazy">
         </main>
         <footer>&copy; Hyrum Wines | WDD 231</footer>
     </body>
