fixed html errors

--- a/project/site-plan.html
+++ b/project/site-plan.html
@@ -25,23 +25,23 @@
         <main>
             <h2>Site Name</h2>
             <p><strong>Site Name</strong>: Magic Deck Learner</p>
-            <p>This name represents the purpose of the site and provides and shows how the site is for learning how to play different Magic the Gathering decks.</p>
+            <p>This name represents the purpose of the site and provides and shows how the site is for learning how to
+                play different Magic the Gathering decks.</p>
             <img src="images/logo.png" alt="logo">
             <h2>Site Purpose</h2>
-            <p>This site will provide a place to view deck lists for Magic the Gathering along with a brief description of each deck to help with being able to learn how to play each deck.</p>
+            <p>This site will provide a place to view deck lists for Magic the Gathering along with a brief description
+                of each deck to help with being able to learn how to play each deck.</p>
             <h2>Scenarios</h2>
-            <ol>
-                <li>What makes this system deck building site stand out?</li>
-                <ul>
-                    <li>This site unlike other deck list sites will provide a description for how to play the deck list provided</li>
-                </ul>
-                <li>Will any of the description include the general archtype(ex aggro, control, combo...) of each deck
-                </li>
-                <ul>
-                    <li>Yes part of each description will provide the general archtype of the deck including the following deck archtypes aggro, control, combo, midrange, and tempo.</li>
-                </ul>
-            </ol>
-            <p></p>
+            <p>
+                <strong>1.</strong>What makes this system deck building site stand out?
+            </p>
+            <p><strong>&bullet;</strong>This site unlike other deck list sites will provide a description for how to
+                play the deck list provided</p>
+            <p><strong>2.</strong>Will any of the description include the general archtype(ex aggro, control, combo...)
+                of each deck
+            </p>
+            <p><strong>&bullet;</strong>Yes part of each description will provide the general archtype of the deck
+                including the following deck archtypes aggro, control, combo, midrange, and tempo.</p>
             <h2>Color Schema</h2>
             <p><strong>Primary Color</strong>(used with the header and footer): #0a5e3b</p>
             <p><strong>Secondary Color</strong>(used with divs and other specific sections): #0a5e3b</p>
