added discover page

--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -3,16 +3,15 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Chamber of Commerce | Deer Valley AZ | Directory</title>
-        <meta name="description" content="A list of the members of the chamber of commerce">
+        <title>Chamber of Commerce | Deer Valley AZ</title>
+        <meta name="description" content="A home page for the Chamber of Commerce">
         <meta name="author" content="Hyrum Wines | WDD 231">
         <link rel="icon" href="favicon.ico">
 
         <meta property="og:title" content="Chamber of Commerce | Deer Valley AZ | Directory">
         <meta property="og:type" content="website">
-        <meta property="og:image"
-            content="https://hieusstorm.github.io/wdd231/chamber/images/logo.png">
-        <meta property="og:url" content="https://hieusstorm.github.io/wdd231/chamber/directory.html">
+        <meta property="og:image" content="https://hieusstorm.github.io/wdd231/chamber/images/logo.png">
+        <meta property="og:url" content="https://hieusstorm.github.io/wdd231/chamber/index.html">
 
         <link rel="stylesheet" href="styles/normalize.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -33,18 +32,12 @@
             <nav>
                 <button id="navButton"></button>
                 <a href="index.html">Home</a>
-                <a href="directory.html" id="current">Directory</a>
+                <a href="directory.html">Directory</a>
                 <a href="join.html">Join</a>
-                <a href="discover.html">Discover</a>
+                <a href="discover.html" id="current">Discover</a>
             </nav>
         </header>
-        <main>
-            <div>
-                <button id="grid">⏹️Grid</button>
-                <button id="list">📄 List</button>
-            </div>
-            <div id="memberArea" class="grid"></div>
-        </main>
+        <main></main>
         <footer>
             <div>
                 <p>Deer Vally AZ Chamber of Commerce</p>
