--- a/chamber/join.html
+++ b/chamber/join.html
@@ -34,7 +34,7 @@
                 <a href="index.html">Home</a>
                 <a href="directory.html">Directory</a>
                 <a href="join.html" id="current">Join</a>
-                <a href="#">Discover</a>
+                <a href="discover.html">Discover</a>
             </nav>
         </header>
         <main>
